# 2d_platformer

./: .gitignore  CMakeLists.txt  setup.bat
src/: CMakeLists.txt  main.cpp
